# signalhouse

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Caddyfile  Caddyfile.local  Dockerfile  GEMINI.md  README.md  docker-compose.local.yml  docker-compose.yml  ollama-entrypoint.sh  pyproject.toml
api/: Dockerfile  pyproject.toml
api/src/trader_api/: __init__.py  app.py  auth.py  config.py  database.py  deps.py  main.py  models.py  schemas.py
api/src/trader_api/migrations/: 0001_split_notification_channel_mutes.sql  0002_add_notifications_mute_column.sql  0003_add_app_settings.sql  0003_ensure_channel_mute_columns.sql  0004_add_portfolio_performance_baseline.sql  0004_ensure_device_registration_columns.sql  0005_ensure_notification_log_columns.sql  __init__.py  m20260416_split_notification_channel_mutes.py
api/src/trader_api/routers/: auth.py  debug.py  market.py  notifications.py  portfolio.py  settings.py  signals.py  status.py  trades.py
api/src/trader_api/services/: backtest.py  commodity.py  datetime_utils.py  editable_settings.py  market_data.py  notifications.py  notifier.py  portfolio.py  risk.py  scheduler.py  sentiment.py  settings.py  signals.py  strategy.py  vision.py
api/tests/: test_strategy_buy_visibility.py
app/Trader/: Trader.entitlements  TraderApp.swift
app/Trader.xcodeproj/: project.pbxproj
app/Trader/AppIcon.icon/: icon.json
app/Trader/Config/: AppConfig.swift  PasskeyDomain.local.example.xcconfig  PasskeyDomain.xcconfig  Theme.swift
app/Trader/Models/: APIModels.swift
app/Trader/Services/: APIClient.swift  AuthManager.swift  PushManager.swift
app/Trader/Views/Components/: EquityChartView.swift  Formatting.swift  InstrumentDetailView.swift  LoadingView.swift  MobileDesign.swift  PriceHistoryChartContent.swift  ScoreViews.swift  SectorChartView.swift  SignalBadgeView.swift  StatCardView.swift
app/Trader/Views/Onboarding/: OnboardingView.swift
app/TraderTests/: TraderTests.swift
app/TraderUITests/: TraderUITests.swift  TraderUITestsLaunchTests.swift
bot/: Dockerfile  docker-entrypoint.sh  pyproject.toml
bot/src/trader_bot/: __init__.py  bot.py  main.py
bot/src/trader_bot/cogs/: __init__.py  portfolio.py  signals.py  status.py  tasks.py  trading.py  upload.py
config/: ibc.ini  settings.local.yaml.example  settings.yaml
docs/: ARCHITECTURE.md  NEXT_STEPS.md  PLAN.md  PROMPT.md  STRATEGY.md
src/trader/: backtest.py  bot.py  broker.py  config.py  main.py  market_data.py  notifier.py  portfolio.py  risk.py  sentiment.py  signals.py  strategy.py  vision.py
src/trader/cogs/: __init__.py  portfolio.py  signals.py  status.py  tasks.py  trading.py  upload.py
tests/: test_risk.py  test_signals.py
web/: Dockerfile  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/app/debug/: page.tsx
web/app/portfolio/: page.tsx
web/app/premarket/: page.tsx
web/app/settings/: page.tsx
web/app/signals/: page.tsx
web/app/status/: page.tsx
web/app/trades/: page.tsx
web/app/upload/: page.tsx
web/components/ui/: auth-gate.tsx  command-search.tsx  data-table.tsx  equity-chart.tsx  loading.tsx  price-chart.tsx  score-breakdown.tsx  search-bar.tsx  search-trigger.tsx  sector-chart.tsx  sidebar.tsx  signal-badge.tsx  stat-card.tsx  toast.tsx  topbar.tsx  trend-proxy.tsx
web/lib/: api.ts  csv.ts  hooks.ts  market-session.ts  privacy.tsx  trade-intent.ts  utils.ts
(+12 files in other folders)
