[project]
name = "trader"
version = "0.1.0"
description = "Algorithmic swing trading bot for TSX stocks via Interactive Brokers"
requires-python = ">=3.11"
dependencies = [
    "ib_insync>=0.9.86",
    "pandas>=2.2",
    "numpy>=1.26",
    "ta-lib>=0.5",
    "vectorbt>=0.26",
    "pyyaml>=6.0",
    "aiohttp>=3.9",
    "schedule>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
trader = "trader.main:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"
