[project]
name = "trader"
version = "0.2.0"
description = "Discord-based trading recommendation bot for TSX stocks and CAD-hedged ETFs"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.3",
    "yfinance>=0.2.36",
    "anthropic>=0.45",
    "pandas>=2.2",
    "numpy>=1.26",
    "ta-lib>=0.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
trader = "trader.main:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"
